correction mineur et ajout du readme

--- a/popup.html
+++ b/popup.html
@@ -136,11 +136,11 @@
     <div class="divider"></div>
 
     <button class="btn btn-danger" id="clearSiteBtn">
-      réinitialiser ce site
+      Réinitialiser ce site
     </button>
 
     <button class="btn btn-danger" id="clearAllBtn">
-      réinitialiser tout les sites
+      Réinitialiser tous les sites
     </button>
 
     <div class="info">
